bugfix/pagination-gap-fixes

--- a/blocks/pagination/pagination.css
+++ b/blocks/pagination/pagination.css
@@ -81,7 +81,7 @@
     }
 
     .pagination .page-btn {
-        width: 39px;
+        width: 40px;
         height: 32px;
     }
 
